--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -221,6 +221,67 @@ header .container {
 	font-size: 12px !important;
 	font-weight: bold !important;
 }
+.view-index .section-home .sub-frase {
+	margin-top: 8px;
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1.4px;
+	font-weight: bold;
+}
+
+/* Footer CSS */ 
+footer {
+	margin-top: 25px;
+	margin-bottom: 10px;
+}
+footer .conteudo-footer {
+	background-color: #fff;
+}
+footer img.logo-footer {
+	margin-top: 10px;
+	width: 10%;
+}
+footer ul {
+	margin-top: 15px;
+}
+footer ul a {
+	text-align: center;
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1.4px;
+	font-weight: bold;
+	color: #565656;
+}
+footer ul a:hover {
+	color: #565656;
+	letter-spacing: 2px;
+}
+footer .detalhe-cima, footer .detalhe-baixo {
+	border-top: 1px solid #000;
+}
+footer .detalhe-complemento {
+	height: 70px;
+	background-color: #565656;
+	width: 1px;
+	position: absolute;
+	margin: auto;
+}
+footer .detalhe-complemento.cima {
+	right: 100%;
+	top: -1px;
+}
+footer .detalhe-complemento.baixo {
+	left: 100%;
+	bottom: 100%;
+}
+footer .copyright {   
+	position: absolute;
+    float: right;
+    margin: auto;
+    bottom: 1px;
+    right: 5px;
+    font-size: 10px;
+}
 
 @media (min-width: 768px) and (max-width: 991px) {
 }
