--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -358,12 +358,14 @@ header .container {
 .view-caminterno .btn-medidas {
 	padding: 10px;
 	background-color: #f5b9c2;
+	border: 1px solid #ff9ead;
     letter-spacing: 1.4px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 .view-caminterno .btn-comprar {
 	background-color: #f5b9c2;
+	border: 1px solid #ff9ead;
 	letter-spacing: 1.4px;
 	font-weight: bold;
 	font-size: 30px;
@@ -380,6 +382,10 @@ header .container {
 	border: none;
 	border-bottom: 2px solid #a9a2a2;
 	text-align: center;
+}
+.view-caminterno .cupom:focus {
+	border-bottom: 2px solid #444;
+	outline: none;
 }
 /******************************/
 /********* Up to You CSS ******/
