--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -180,8 +180,9 @@ header .container {
 	letter-spacing: 1.4px;
 	font-weight: bold;
 	color: #565656;
+	width: 20%;
 }
-.ul-menu a:nth-child(-n+5) li {
+.ul-menu a:nth-child(-n+4) li {
 	border-right: 1px solid #565656;
 }
 .ul-menu a:hover li{
@@ -324,12 +325,24 @@ header .container {
 /******************************/
 /**** Camiseta Venda CSS ******/
 /******************************/
-.view-caminterno .parte-info .cor {
+.view-caminterno .parte-info .cor,
+.view-caminterno .tamanho {
 	border: 1px solid #9a9a9a;
 	width: 50px;
 	height: 50px;
 	margin: 0 5px;
 	cursor: pointer;
+}
+.view-caminterno .tamanho {
+	background-color: #e7e7e7;
+	padding-top: 15px;
+	text-align: center;
+	font-weight: bold;
+}
+.view-caminterno .tamanho.selected {
+	background-color: #777;
+	color: #fff;
+	border-color: #ff9ead;
 }
 .view-caminterno .cor.preto {
 	background-color: #000;
@@ -344,7 +357,7 @@ header .container {
 	background-color: #343434;
 }
 .view-caminterno .img-venda.imgLiquid {
-	height: 500px;
+	height: 660px;
 }
 .view-caminterno .owl-thumbs {
 	margin-top: 5px;
@@ -369,7 +382,8 @@ header .container {
 	letter-spacing: 1.4px;
 	font-weight: bold;
 	font-size: 30px;
-	padding: 15px;
+	text-transform: uppercase;
+	padding: 8px;
 	width: 50%;
 	margin: 20px 0;
 }
@@ -448,6 +462,15 @@ header .container {
 .view-girlgang .texto-principal {
 	text-align: justify;
 	font-size: 16px;
+}
+.view-girlgang iframe {
+	margin: 30px auto;
+}
+.view-girlgang .owl-thumbs {
+	margin-top: 10px;
+}
+.view-girlgang .owl-thumbs .imgLiquid {
+	height: 100px;
 }
 
 /******************************/
