Replacing the placeholders (duh) text and image, owl carousel is now jumping from page to page (2 by 2), changed Tabela De Medidas modal to md, changed header background image

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -136,7 +136,10 @@ header .container {
 	opacity: 0.95;
 }
 .logo-box {
-	background-image: url(../img/bricks4.jpg);
+	background-image: url(../img/bricks5.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	border-radius: 10px 10px 0 0;
 }
 .input-busca {
