--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -483,6 +483,39 @@ header .container {
 }
 
 /******************************/
+/********* Sobre CSS *********/ 
+/******************************/
+.view-sobre .icones {
+	margin-top: 50px;
+	min-height: 150px;
+}
+.view-sobre .icone-sobre {
+	font-size: 30px;
+	border: 3px solid #444;
+	background-color: #444;
+	color: #fff;
+	border-radius: 5px;
+	padding: 25px 30px;
+}
+.view-sobre .icone-sobre.fa-bullhorn {
+	padding: 25px;
+}
+.view-sobre .icone-sobre:hover {
+	border: 3px solid #444;
+	background-color: #fff;
+	color: #444;
+}
+.view-sobre .icone-sobre:hover + .texto-icone {
+	font-size: 20px;
+}
+.view-sobre .texto-icone {
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: 1.4px;
+	margin-top: 8px;
+	color: #444;
+}
+/******************************/
 /********* Footer CSS *********/ 
 /******************************/
 footer {
