Changing responsive layout

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -676,10 +676,18 @@ footer .copyright {
 	/******************************/
 	/**** Camisetas Mobile CSS ****/ 
 	/******************************/
-	.view-camisetas .listagem-camisetas .item-info {
-	}
 	.view-camisetas .listagem-camisetas li {
 		padding: 2.5px;
+	}
+	.view-camisetas .listagem-camisetas li:not(.no-hoverxs):hover {
+		border: 1px solid #f5b9c2;
+		padding: 0;
+	}
+	.view-camisetas .listagem-camisetas li:not(.no-hoverxs):hover .img-estampas {
+		margin: 0;
+	}
+	.view-camisetas .listagem-camisetas li:not(.no-hoverxs):hover .item-info {
+		padding: 0 15px;
 	}
 	/******************************/
 	/**** Sobre Mobile CSS ********/ 
